[css] fix spacing at the top

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -62,10 +62,6 @@ body {
   position: relative;
 }
 
-main {
-  margin-top: 24px;
-}
-
 .full-height {
   @media (max-width: 767.98px) {
     min-height: 100vh;
